--- a/templates/register.html
+++ b/templates/register.html
@@ -3,22 +3,31 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-  <div class="content-container">
-    <div class="content">
-      <h2 class="page-head">Register</h2>
-      <form action="/register" method="post">
-        <div class="form-inline">
-          <input class="rego" autocomplete="off" autofocus name="username" placeholder="Username" type="text">
-          <input class="rego" name="password" placeholder="Password" type="password">
-          <input class="rego" name="repeat" placeholder="Repeat Password" type="password">
+    <div class="content-container">
+        <div class="content">
+            <h2 class="page-head">Register</h2>
+            <form action="/register" method="post">
+                <div class="form-inline">
+                    <div class="login-section">
+                        <label for="password">Username:</label>                        
+                        <input class="rego" autocomplete="off" autofocus name="username" placeholder="Username" type="text">
+                    </div>
+                    <div class="login-section">
+                        <label for="password">Password:</label>
+                        <input class="rego" name="password" placeholder="Password" type="password">
+                    </div>
+                    <div class="login-section">
+                        <label for="password">Repeat password:</label>
+                        <input class="rego" name="repeat" placeholder="Repeat Password" type="password">
+                    </div>
+                </div>
+                <div class="form-inline">
+                    <button class="login-btn" type="submit">Register</button>
+                </div>
+            </form>
         </div>
-        <div class="form-inline">
-          <button class="control login-btn" type="submit">Register</button>
-        </div>
-      </form>
     </div>
-  </div>
-  <script type="text/javascript">
-    document.getElementById("login").classList.add('active');
-  </script>
+    <script type="text/javascript">
+        document.getElementById("login").classList.add('active');
+    </script>
 {% endblock %}
