fixed tag ending

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="content-container">
     <div class="content profile-content">
-      <h5 class="page-head">Profile Page: '{{ session["username"] }}'</h3>
+      <h5 class="page-head">Profile Page: '{{ session["username"] }}'</h5>
       <div id="profile-menu">
         <div id="profile-top">
             <div id="profile-user">
@@ -14,10 +14,12 @@
                 <p>Registered: {{ session["reg_date"] }}</p>
             </div>
             <div id="profile-info">
-                <p>The table below contains a full record of the questions you have answered. 
-                    You can see how many times you've answered each question and the percentage of times you 
-                    were correct. Use this information to focus on your weaker questions </p>
-                <p>Note: The table is sortable by it's headers.</p>
+                <div>
+                    <p>The table below contains a full record of the questions you have answered. 
+                        You can see how many times you've answered each question and the percentage of times you 
+                        were correct. Use this information to focus on your weaker questions </p>
+                    <p>Note: The table is sortable by it's headers.</p>
+                </div>
             </div>
         </div>
         <div id="profile-bottom">
