changed css class name to clear namespace

--- a/templates/games/gender.html
+++ b/templates/games/gender.html
@@ -7,7 +7,7 @@
   <div class="content">
         {% include "partials/gm-info-disp.html" %}
         <div class="word-display">
-            <h1 class="article blank">____</h1>
+            <h1 class="gram-article blank">____</h1>
             <h1 class="current"></h1>
         </div>
         <h4 class="hint"></h4>
