--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -131,7 +131,7 @@ td, th { text-align: center; padding: 30px 1px 30px 1px; }
 /* Selection Options */
 .choices { width: 100%; justify-content: center; display: flex; flex-wrap: wrap; 
            margin-bottom: 25px; }
-.choice { margin: 15px; border: black solid 2px; padding: 8px 15px; height: 50px; 
+.choice { margin: 15px 15px 0px 15px; border: black solid 2px; padding: 8px 15px; height: 50px; 
           text-align: center; font-size: 1.6em; border-radius: 4px; line-height: 32px; 
           vertical-align: middle; 
         }
@@ -252,7 +252,7 @@ td, th { text-align: center; padding: 30px 1px 30px 1px; }
     .navbar-container { font-size: 9px; }
     .option { width: 95%; }
     .text { padding: 23px 10px; }
-    .controls { flex-direction: row; justify-content: center; align-items: center; flex-wrap: wrap;
+    .controls { flex-direction: row; justify-content: space-evenly; align-items: center; flex-wrap: wrap;
                 width: 100%; 
             }
     .control { margin: 5px; }
