--- a/templates/register.html
+++ b/templates/register.html
@@ -6,8 +6,7 @@
     <div class="content-container">
         <div class="content">
             <h2 class="page-head">Register</h2>
-            <form action="/register" method="post">
-                <div class="form-inline">
+            <form class="form-inline" action="/register" method="post">
                     <div class="login-section">
                         <label for="password">Username:</label>                        
                         <input class="rego" autocomplete="off" autofocus name="username" placeholder="Username" type="text">
@@ -20,10 +19,7 @@
                         <label for="password">Repeat password:</label>
                         <input class="rego" name="repeat" placeholder="Repeat Password" type="password">
                     </div>
-                </div>
-                <div class="form-inline">
                     <button class="login-btn" type="submit">Register</button>
-                </div>
             </form>
         </div>
     </div>
