added margin removal class to origin details

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
                 <div class="article-section origin">
                     <h3 class="section-head">Origin</h3>
                     <div class="section-content">
-                        <details class="sc-subsection" open>
+                        <details class="sc-subsection no-bottom" open>
                             <summary class="sc-subsection__summary">Why this?</summary>
                             <p>I created <strong><span class="logoder">Der</span><span class="logodie">Die</span><span class="logodas">Das</span></strong> in 2019. 
                                 I had just finished HarvardX's <a href="https://www.edx.org/course/cs50s-introduction-to-computer-science" target="_blank">CS50: Introduction to Computer Science</a>
