sections are now closed by default

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
                 <div class="article-section origin">
                     <h3 class="section-head">Origin</h3>
                     <div class="section-content">
-                        <details class="sc-subsection no-bottom" open>
+                        <details class="sc-subsection no-bottom">
                             <summary class="sc-subsection__summary">Why this?</summary>
                             <p>I created <strong><span class="logoder">Der</span><span class="logodie">Die</span><span class="logodas">Das</span></strong> in 2019. 
                                 I had just finished HarvardX's <a href="https://www.edx.org/course/cs50s-introduction-to-computer-science" target="_blank">CS50: Introduction to Computer Science</a>
@@ -26,7 +26,7 @@
                 <div class="article-section tech">
                     <h3 class="section-head">Technology</h3>
                     <div class="section-content">
-                        <details class="sc-subsection" open>
+                        <details class="sc-subsection">
                             <summary class="sc-subsection__summary">Backend</summary>
                             <p>The backend of this application uses <strong>Python</strong>, <strong>Flask</strong> and <strong>PostgreSQL</strong> for a database. 
                                 Flask is a Python microframework for the web that uses Jinja 2 as a templating language. Using Flask with Python allows me to serve 
@@ -35,14 +35,14 @@
                                 SQLAlchemy, which I also used for ORM. The tables were created with SQLAlchemy models, but queries are done in pure SQL because I
                                 wanted to learn SQL syntax and not just SQLAlchemy.</p>
                         </details>
-                        <details class="sc-subsection" open>
+                        <details class="sc-subsection">
                             <summary class="sc-subsection__summary">Frontend</summary>
                             <p>The frontend was built with <strong>HTML5</strong>, <strong>CSS3</strong> and <strong>JavaScript</strong>. I choose not to use a front end 
                                 framework or CSS preprocessors because I wanted to focus on learning the basics for this project. I was able to do all the DOM manipulation
                                 that I needed with pure JavaScript. Even AJAX requests were done with the <em>XMLHttpRequest()</em> object. In the future I would like to 
                                 try using some of the newer frontend technologies like Javascript frameworks and CSS preprocessors. More about that in the learning section.</p>
                         </details>
-                        <details class="sc-subsection" open>
+                        <details class="sc-subsection">
                             <summary class="sc-subsection__summary">Versions and Code</summary>
                             <p>For my first project, I'm aware my code doesn't follow best practices. In fact, experienced developers woud probably consider it to be disorganized.
                                 Originally I had planned to go through and refactor everything to make it more presentable, but in the end I've decided to move on to new projects
@@ -65,7 +65,7 @@
                 <div class="article-section learn">
                     <h3 class="section-head">Future Learning</h3>
                     <div class="section-content">
-                        <details class="sc-subsection" open>
+                        <details class="sc-subsection">
                             <summary class="sc-subsection__summary">CSS and HTML</summary>
                             <p>During this project I significantly increased my understanding of CSS and HTML through trail and error, StackOverflow and parts of
                                 the useful HTML and CSS tutorial over at <a href="https://internetingishard.com/" target="_blank">Interneting Is Hard</a>. I now feel pretty comfortable
@@ -75,7 +75,7 @@
                                 like SASS. I am also interested in trying to build a site using a <em>functional CSS framework</em>, namely TailwindCSS. I am intruiged
                                 by the idea of using utility classes and components to make CSS more reusable and scalable.</p>
                         </details>
-                        <details class="sc-subsection" open>
+                        <details class="sc-subsection">
                             <summary class="sc-subsection__summary">JavaScript</summary>
                             <p>During the project I went from almost no JavaScript to being comforable manipulating the DOM using Element class methods
                                 like <em>Element.querySelector()</em>, using anonymous functions and arrow syntax, using higher order functions like <em>map()</em> and 
@@ -85,7 +85,7 @@
                                 which one of those to look into first. I hope it can speed my development process and add more structure to my applications as a whole. That being 
                                 said, I want to be careful that I continue learing JavaScript, and not just frameworks.</p>
                         </details>
-                        <details class="sc-subsection" open>
+                        <details class="sc-subsection">
                             <summary class="sc-subsection__summary">Backend and Database</summary>
                             <p>During the project I learned quite a bit about using Flask and Jinja 2 to serve websites. I love the ability to template HTML pages
                                 with these tools. Having easy access to extras like password encryption and Sessions is a bonus. My understanding of some more complex SQL like JOIN
