changed info display at top of page

--- a/templates/new-game.html
+++ b/templates/new-game.html
@@ -7,15 +7,19 @@
     <div class="content games-container">
         <h2 class="page-head cap">New Game</h2>
         <div class="ng-info">
-            <div>
-                <h4>Chooose a game type and press 'Start Game'</h4>
-                <p><strong>'Set Size'</strong> allows you to limit the number of questions in the game. 
+            <h3 class="ng-info__title">Chooose a game type and press 'Start Game'</h3>
+            <details class="ng-info__cat">
+                <summary class="ng-info__cat--header"><strong>About Set Size</strong></summary>
+                <p class="ng-info__cat--text">Allows you to limit the number of questions in the game. 
                     For example, a set size of ten will give you ten random questions.
                     If left blank, all possible questions will be shown until the 'results' button is pressed.</p>
-                <p><strong>'Max Score'</strong> allows you to filter out questions you have done well on in the past.
+            </details>
+            <details class="ng-info__cat">
+                <summary class="ng-info__cat--header"><strong>About Max Score</strong></summary>
+                <p class="ng-info__cat--text">Allows you to filter out questions you have done well on in the past.
                     For example, if 'Max Score' is set to 99 you will not recieve any questions on which your score is 100%.
                     If left blank, any question in the set can be shown. Must be logged in to access. </p>
-            </div>
+            </details>
         </div>
         <div class="option">
             <div>
