--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -262,13 +262,19 @@ tr:nth-child(n+2):hover {
     }
     .navlinks.responsive .res-menu {
       position: absolute;
-      right: 0;
-      top: 8px;
+      right: 0px;
+      top: 6.5px;
     }
     .navlinks.responsive a {
       float: none;
       display: block;
       text-align: left;
+    }
+    .navlinks a:hover {
+        color: gold;
+        background-color: inherit;
+        border: none;
+
     }
 }
 
