--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,6 +27,9 @@
                     navlinks.className = 'navlinks';
                 }
             }
+            function nav_look(x) {
+                x.classList.toggle("change");
+            }
         </script>
     </body>
 </html>
